--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,13 @@
-<%= form_for :session, url: session_path do |form| %>
-  <div class="form-group">
-    <%= form.label :email %>
-    <%= form.text_field :email, type: "email", class: "form-control" %>
-  </div>
+<div id="clearance" class="sign-up">
+  <h2><%= t(".title") %></h2>
 
-  <div class="form-group">
-    <%= form.label :password %>
-    <%= form.password_field :password, class: "form-control" %>
-  </div>
+  <%= form_for @user do |form| %>
+    <%= render partial: '/users/form', object: form %>
 
-  <%= form.submit class: "btn btn-primary" %>
 
-  <% if Clearance.configuration.allow_sign_up? %>
-    <%= link_to t(".sign_up"), sign_up_path, class: "btn btn-link" %>
+
+    <div class="other-links">
+      <%= link_to t(".sign_in"), sign_in_path %>
+    </div>
   <% end %>
-  <%= link_to t(".forgot_password"), new_password_path, class: "btn btn-link" %>
-<% end %>
+</div>
