--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 <body>
   <div id="header">
     <% if signed_in? %>
-      <%= current_user.email %>
+      <%= current_user.username %>
       <%= button_to "Sign out", sign_out_path, method: :delete %>
     <% else %>
       <%= link_to "Sign in with Facebook", "/auth/facebook" %>
