Listing index complete

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,8 @@
     <% if signed_in? %>
       <%= current_user.username %>
       <%= button_to "Sign out", sign_out_path, method: :delete %>
+    <% elsif request.path_info.include?( '/sign_in' )  %>
+      <%= link_to "Sign in with Facebook", "/auth/facebook" %>
     <% else %>
       <%= link_to "Sign in with Facebook", "/auth/facebook" %>
       <%= link_to "Sign in", sign_in_path %>
