--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -10,8 +10,8 @@
 </div>
 
 <div class="text-field">
-    <%= form.label :type %>
-    <%= form.text_area :type %>
+    <%= form.label :kind %>
+    <%= form.text_area :kind %>
 </div>
 
 <div class="text-field">
@@ -30,12 +30,17 @@
 </div>
 
 <div class="text-field">
-    <%= form.label :address %>
+    <%= form.label "street number, name, and zip code" %>
     <%= form.text_area :address %>
 </div>
 
 <div class="number-field">
-    <%= form.label :guest %>
+    <%= form.label "price per day" %>
+    <%= form.number_field :price, in: 5...1000, value: 5%>
+</div>
+
+<div class="number-field">
+    <%= form.label "possible amount of guests"%>
     <%= form.number_field :guest, in: 1...17, value: 1%>
 </div>
 
@@ -59,3 +64,4 @@
     <%= form.submit %>
 </div>
 <% end %>
+<p><%=link_to "Home", user_path(current_user)%> <%=link_to "Index", listings_path%></p>
