--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,6 @@
 <%= form.submit class: "btn btn-primary" %>
 
 <% if Clearance.configuration.allow_sign_up? %>
-  <%= link_to t(".sign_up"), sign_up_path, class: "btn btn-link" %>
+  <% link_to t(".sign_up"), sign_up_path, class: "btn btn-link" %>
 <% end %>
 <%= link_to t(".forgot_password"), new_password_path, class: "btn btn-link" %>
