1. added image functionality with AWS 2. added skeleton for payments

--- a/app/views/listings/edit.html.erb
+++ b/app/views/listings/edit.html.erb
@@ -1,13 +1,10 @@
 <div id="clearance" class="update">
   <h2><%= t(".title") %></h2>
 
-  <%= form_for @user do |form| %>
-    <%= render partial: '/users/update', object: form %>
+    <%= render partial: '/listings/update'%>
 
 
 
     <div class="other-links">
     </div>
-  <% end %>
-</div>
 </div>
