--- a/app/views/listings/_update.html.erb
+++ b/app/views/listings/_update.html.erb
@@ -59,12 +59,12 @@
     <%= form.number_field :bathrooms, in: 1...17, step: 0.5, class: "form-control" %>
 </div>
 
-<div class="number-field">
+<div class="date-field">
     <%= form.label :start_date %>
     <%= form.date_field :start_date, class: "form-control" %>
 </div>
 
-<div class="number-field">
+<div class="date-field">
     <%= form.label :end_date %>
     <%= form.date_field :end_date, class: "form-control" %>
 </div>
